# expression-finder

./: .gitignore  Cargo.toml  index.html  worker.js
.github/workflows/: deploy.yaml
pkg/: README.md  expression_finder.d.ts  expression_finder.js  expression_finder_bg.wasm  expression_finder_bg.wasm.d.ts  package.json
src/: lib.rs
static/: index.html  main.js  style.css  worker.js
