[package]
name = "expression-finder"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
itertools = "0.13"
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.7", optional = true }

[features]
default = ["panic-hook"]
panic-hook = ["console_error_panic_hook"]